--- a/service-back.fenoty.ru/.env.production
+++ b/service-back.fenoty.ru/.env.production
@@ -1,9 +1,7 @@
-# DB_HOST=localhost
-# DB_USER=user
-# DB_PASSWORD=YAaw7Zn@.h@8THr
-# DB_DATABASE=tapac_db
+DB_HOST=localhost
+DB_USER=admin
+DB_PASSWORD=qwertyuiop1488
+DB_DATABASE=tapac_db
 
-# IMAGE_ROOT=/home/GCBack
-# REDIS_PORT=6380
-# EXPRESS_PORT=9096
-# WSS_PORT=9192
+EXPRESS_PORT=9096
+WSS_PORT=9192
