--- a/service-back.fenoty.ru/.env.production
+++ b/service-back.fenoty.ru/.env.production
@@ -2,6 +2,6 @@ DB_HOST=localhost
 DB_USER=admin
 DB_PASSWORD=qwertyuiop1488
 DB_DATABASE=tapac_db
-
+STORAGE_ROOT=https://service-back.fenoty.ru
 EXPRESS_PORT=9096
 WSS_PORT=9192
